# EuFund

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AI_MIGRATION_PLAN.md  AI_OPTIMIZATION_RESEARCH.md  AUDIT_REPORT.md  BUILD_STATUS_ASSESSMENT.md  CLAUDE.md  COMPREHENSIVE_AUDIT_PLAN.md  COMPREHENSIVE_AUDIT_REPORT_2026-02-15.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEPLOY_PLAN.md  ENHANCEMENT_CHECKLIST.md  EXISTING_AI_INFRASTRUCTURE.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  GCP_DEPLOYMENT_SUMMARY.md  GEMINI.md  LICENSE  MIGRATION_PROGRESS_DASHBOARD.md  MULTI_AGENT_AUDIT_FINDINGS.md  MULTI_AGENT_IMPLEMENTATION_COORDINATION.md  PHASE1_REVIEW_REPORT.md  PHASE1_SECURITY_ARCHITECTURE.md  PHASE2_ARCHITECTURE_DIAGRAM.md  PHASE2_IMPLEMENTATION_PROGRESS.md  PHASE2_IMPLEMENTATION_STATUS.md  README.md  SECRET_ROTATION_NEEDED.md  SECURITY_FIX_SUMMARY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SPRINT_PLAN.md  STRATEGIC_BUSINESS_MODEL_ANALYSIS.md  TASK1_CODEX_IMPLEMENTATION_PREP.md  TASK1_GEMINI_REVIEW_PREP.md  TASK1_PRELIMINARY_ANALYSIS.md  TASK1_generateProposal_CONTEXT.md  (+15 more)
.github/: dependabot.yml
app/: .dockerignore  .env.example  .env.production.example  .eslintrc.json  .gitignore  AUDIT-REPORT.md  (+21 more)
app/agent-harness/: pyproject.toml
app/agent-harness/fondeu/: cli.py  config.py  http.py
app/agent-harness/fondeu/commands/: ai.py  auth.py  calls.py  connectors.py  db.py  health.py  projects.py  rag.py  test.py
app/agent-harness/fondeu_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+1412 files in other folders)
