[project]
name = "fondeu-cli"
version = "0.1.0"
description = "CLI harness for the FondEU platform"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
fondeu = "fondeu.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
